--- a/style.css
+++ b/style.css
@@ -1,113 +1,867 @@
-body {
-  background-color: #f0f0f0;
-  display: grid;
-  place-items: center;
-  margin: 0;
+@charset "UTF-8";
+html, body {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.figure {
-  position: relative;
+body {
+  background: #FFBEFA;
+  font-family: "Lato", sans-serif;
 }
 
-.duck {
-  position: relative;
-  animation: duck-swim 3s infinite linear alternate;
+.phone {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #272526;
+  width: 250px;
+  height: 420px;
+  border-radius: 20px;
 }
-.duck__body {
-  position: relative;
-  width: 200px;
-  height: 300px;
-  background-color: #fdc017;
-  border-radius: 50%/30%;
-  z-index: 1;
-}
-.duck__body::before, .duck__body::after {
+.phone::after {
+  display: block;
   content: "";
   position: absolute;
-}
-.duck__body::before {
-  width: 30px;
-  height: 30px;
+  left: 50%;
+  bottom: 10px;
+  transform: translateX(-50%);
+  width: 15px;
+  height: 15px;
+  border: 3px solid #fff;
   border-radius: 50%;
-  background-color: #8a5d3c;
-  left: 50%;
-  top: 20%;
-  transform: translate(-50%);
-  animation: eye 5s linear infinite;
 }
-@keyframes eye {
-  95% {
-    transform: translate(-50%) rotateX(0);
-  }
-  100% {
-    transform: translate(-50%) rotateX(0.5turn);
-  }
+.phone .screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 40px auto 0;
+  background: #fff;
+  width: 220px;
+  height: 340px;
+  border-radius: 5px;
 }
-.duck__body::after {
-  width: 100%;
-  height: 50%;
-  background-color: #e59915;
-  border-radius: 40% 10% 40% 40%/50% 10% 50% 50%;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-25%);
-  box-sizing: border-box;
-  border: 40px solid #fdc017;
-}
-.duck__mouth {
-  z-index: -1;
-  width: 60px;
-  height: 25px;
-  background-color: #e7601c;
+.phone .screen .notification {
   position: absolute;
-  top: 25%;
-  left: 0;
-  transform: translateX(-80%);
-  border-top-left-radius: 25% 50%;
-  border-bottom-left-radius: 25% 50%;
-  box-shadow: 4px 27px 0 #e7601c;
+  left: 50%;
+  transform: translate(-50%, 3px);
+  padding: 10px;
+  width: 86%;
+  height: 60px;
+  background: rgba(255, 255, 255, 0.95);
+  border: 1px solid #EFEFEF;
+  border-radius: 5px;
+  box-shadow: 0 5px 5px -5px #6F58D1;
+  box-sizing: border-box;
+  font-size: 14px;
+  opacity: 0;
+  z-index: 20;
+  -webkit-animation: new-notification 10s;
+          animation: new-notification 10s;
+  -webkit-animation-delay: 15s;
+          animation-delay: 15s;
 }
-@keyframes duck-swim {
-  from {
-    transform: rotate(-2deg);
-  }
-  to {
-    transform: rotate(2deg);
-  }
+.phone .screen .notification::before {
+  display: block;
+  content: "Your Fan";
+  font-weight: bold;
 }
-
-.water {
+.phone .screen .header {
+  width: 100%;
+  height: 45px;
+  padding: 12px;
+  background: linear-gradient(135deg, #6F58D1 55%, #6F58D1 55%, #2B2067 160%);
+  box-sizing: border-box;
+  color: #fff;
+  font-weight: bold;
+  text-align: center;
+}
+.phone .screen .texts {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 5px;
+  width: 100%;
+  height: 170px;
+  background: linear-gradient(to bottom, #fff 0%, #fff 75%, #EFEFEF 120%);
+  box-sizing: border-box;
+  overflow: hidden;
+}
+.phone .screen .texts .blocker {
+  width: 100%;
+  height: 150px;
+  background: transparent;
+}
+.phone .screen .texts .text {
+  visibility: visible;
+  opacity: 1;
+  align-self: flex-end;
+  margin: 3px 3px 0;
+  padding: 5px;
+  max-width: 80%;
+  background: #F2389C;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  box-sizing: border-box;
+  box-shadow: 0 3px 5px -3px #F2389C;
+  color: #fff;
+  -webkit-animation: text-bubble 10s cubic-bezier(0.5, 0, 0.5, 1) backwards;
+          animation: text-bubble 10s cubic-bezier(0.5, 0, 0.5, 1) backwards;
+}
+.phone .screen .texts .text:first-child {
+  border-top-right-radius: 8px;
+}
+.phone .screen .texts .text:last-child {
+  border-bottom-right-radius: 8px;
+}
+.phone .screen .texts .text:nth-child(2) {
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+.phone .screen .texts .text:nth-child(3) {
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+}
+.phone .screen .texts .text:nth-child(4) {
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
+}
+.phone .screen .texts .text:nth-child(5) {
+  -webkit-animation-delay: 8s;
+          animation-delay: 8s;
+}
+.phone .screen .texts .text:nth-child(6) {
+  -webkit-animation-delay: 10s;
+          animation-delay: 10s;
+}
+.phone .screen .texts .text:nth-child(7) {
+  -webkit-animation-delay: 12s;
+          animation-delay: 12s;
+}
+.phone .screen .texts .text:nth-child(8) {
+  -webkit-animation-delay: 14s;
+          animation-delay: 14s;
+}
+.phone .screen .texts .text:nth-child(9) {
+  -webkit-animation-delay: 16s;
+          animation-delay: 16s;
+}
+.phone .screen .texts .text:nth-child(10) {
+  -webkit-animation-delay: 18s;
+          animation-delay: 18s;
+}
+.phone .screen .texts .text:nth-child(11) {
+  -webkit-animation-delay: 20s;
+          animation-delay: 20s;
+}
+.phone .screen .texts .text:nth-child(12) {
+  -webkit-animation-delay: 22s;
+          animation-delay: 22s;
+}
+.phone .screen .texts .text:nth-child(13) {
+  -webkit-animation-delay: 24s;
+          animation-delay: 24s;
+}
+.phone .screen .texts .text:nth-child(14) {
+  -webkit-animation-delay: 26s;
+          animation-delay: 26s;
+}
+.phone .screen .texts .text:nth-child(15) {
+  -webkit-animation-delay: 28s;
+          animation-delay: 28s;
+}
+.phone .screen .texts .text:nth-child(16) {
+  -webkit-animation-delay: 30s;
+          animation-delay: 30s;
+}
+.phone .screen .texts .text:nth-child(17) {
+  -webkit-animation-delay: 32s;
+          animation-delay: 32s;
+}
+.phone .screen .texts .text:nth-child(18) {
+  -webkit-animation-delay: 34s;
+          animation-delay: 34s;
+}
+.phone .screen .texts .text:nth-child(19) {
+  -webkit-animation-delay: 36s;
+          animation-delay: 36s;
+}
+.phone .screen .keyboard {
+  height: 125px;
+  background: #2B2067;
+  color: #fff;
+  font-size: 16px;
+}
+.phone .screen .keyboard .input {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 35px;
+  background: white;
+}
+.phone .screen .keyboard .input::before, .phone .screen .keyboard .input::after {
+  display: block;
+}
+.phone .screen .keyboard .input::before {
+  content: "Semangat Caca";
+  width: 180px;
+  height: 20px;
+  padding: 0 5px;
+  border: 2px solid #EFEFEF;
+  border-radius: 20px;
+  box-sizing: border-box;
+  color: #272526;
+  font-size: 12px;
+  -webkit-animation: type-refresh 4s backwards;
+          animation: type-refresh 4s backwards;
+  -webkit-animation-delay: 36s;
+          animation-delay: 36s;
+}
+.phone .screen .keyboard .input::after {
+  content: "⬆";
+  width: 20px;
+  height: 20px;
+  padding: 0px 4.5px;
+  background: #F2389C;
+  border-radius: 50%;
+  box-sizing: border-box;
+  font-size: 12px;
+  text-align: center;
+}
+.phone .screen .keyboard .row {
+  position: relative;
+  width: 100%;
+  margin-left: 6px;
+  letter-spacing: 12px;
+  text-align: center;
+}
+.phone .screen .keyboard .row:last-child {
+  position: relative;
+  margin: 5px auto;
+  width: 90px;
+  height: 22px;
+  background: #948FB3;
+  border-radius: 2px;
+  font-size: 12px;
+}
+.phone .screen .keyboard .row:last-child::before, .phone .screen .keyboard .row:last-child::after {
+  display: inline-block;
+  position: relative;
+  margin-top: 2px;
+  color: #948FB3;
+  letter-spacing: 0;
+}
+.phone .screen .keyboard .row:last-child::before {
+  content: "123";
+  left: -60px;
+}
+.phone .screen .keyboard .row:last-child::after {
+  content: "return";
+  right: -65px;
+}
+
+@-webkit-keyframes text-bubble {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+    max-height: 0px;
+    margin: 0;
+    padding: 0;
+    transform: scale(0.6);
+  }
+  9% {
+    padding: 5px;
+    margin: 3px;
+    visibility: visible;
+  }
+  10% {
+    opacity: 1;
+    max-height: 170px;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 1;
+    max-height: 170px;
+    transform: scale(1);
+  }
+}
+
+@keyframes text-bubble {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+    max-height: 0px;
+    margin: 0;
+    padding: 0;
+    transform: scale(0.6);
+  }
+  9% {
+    padding: 5px;
+    margin: 3px;
+    visibility: visible;
+  }
+  10% {
+    opacity: 1;
+    max-height: 170px;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 1;
+    max-height: 170px;
+    transform: scale(1);
+  }
+}
+@-webkit-keyframes new-notification {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -10px);
+  }
+  5% {
+    opacity: 1;
+    transform: translate(-50%, 3px);
+  }
+  50% {
+    opacity: 1;
+    transform: translate(-50%, 3px);
+  }
+  55% {
+    opacity: 0;
+    transform: translate(-50%, -10px);
+  }
+  100% {
+    opacity: 0;
+    transform: translate(-50%, -10px);
+  }
+}
+@keyframes new-notification {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -10px);
+  }
+  5% {
+    opacity: 1;
+    transform: translate(-50%, 3px);
+  }
+  50% {
+    opacity: 1;
+    transform: translate(-50%, 3px);
+  }
+  55% {
+    opacity: 0;
+    transform: translate(-50%, -10px);
+  }
+  100% {
+    opacity: 0;
+    transform: translate(-50%, -10px);
+  }
+}
+@-webkit-keyframes type-refresh {
+  0% {
+    content: "";
+  }
+  1% {
+    content: "R";
+  }
+  2% {
+    content: "Re";
+  }
+  3% {
+    content: "Ref";
+  }
+  4% {
+    content: "Refr";
+  }
+  5% {
+    content: "Refre";
+  }
+  6% {
+    content: "Refres";
+  }
+  7% {
+    content: "Refresh";
+  }
+  8% {
+    content: "Refresh t";
+  }
+  9% {
+    content: "Refresh to";
+  }
+  10% {
+    content: "Refresh to w";
+  }
+  11% {
+    content: "Refresh to wa";
+  }
+  12% {
+    content: "Refresh to wat";
+  }
+  13% {
+    content: "Refresh to watc";
+  }
+  14% {
+    content: "Refresh to watch";
+  }
+  15% {
+    content: "Refresh to watch a";
+  }
+  16% {
+    content: "Refresh to watch ag";
+  }
+  17% {
+    content: "Refresh to watch aga";
+  }
+  18% {
+    content: "Refresh to watch agai";
+  }
+  19% {
+    content: "Refresh to watch again";
+  }
+  20% {
+    content: "Refresh to watch again!";
+  }
+}
+@keyframes type-refresh {
+  0% {
+    content: "";
+  }
+  1% {
+    content: "R";
+  }
+  2% {
+    content: "Re";
+  }
+  3% {
+    content: "Ref";
+  }
+  4% {
+    content: "Refr";
+  }
+  5% {
+    content: "Refre";
+  }
+  6% {
+    content: "Refres";
+  }
+  7% {
+    content: "Refresh";
+  }
+  8% {
+    content: "Refresh t";
+  }
+  9% {
+    content: "Refresh to";
+  }
+  10% {
+    content: "Refresh to w";
+  }
+  11% {
+    content: "Refresh to wa";
+  }
+  12% {
+    content: "Refresh to wat";
+  }
+  13% {
+    content: "Refresh to watc";
+  }
+  14% {
+    content: "Refresh to watch";
+  }
+  15% {
+    content: "Refresh to watch a";
+  }
+  16% {
+    content: "Refresh to watch ag";
+  }
+  17% {
+    content: "Refresh to watch aga";
+  }
+  18% {
+    content: "Refresh to watch agai";
+  }
+  19% {
+    content: "Refresh to watch again";
+  }
+  20% {
+    content: "Refresh to watch again!";
+  }
+}
+.victim {
   position: absolute;
-  z-index: -1;
-  left: 50%;
-  transform: translateX(-40%) translateY(-50%);
-  background-color: royalblue;
-  border-radius: 50%;
-  width: 350px;
-  height: 80px;
-  overflow: hidden;
-  z-index: -1;
+  bottom: 0;
+  right: 10%;
 }
-.water::before {
+.victim .head {
+  position: relative;
+  display: flex;
+  width: 140px;
+  height: 120px;
+  background: #272526;
+  border-radius: 50% 50% 50% 50%/60% 60% 40% 40%;
+  z-index: 5;
+}
+.victim .head::before, .victim .head::after {
+  display: block;
   content: "";
-  border-radius: 50%;
-  border: 2px solid rgba(135, 207, 235, 0.5);
-  animation: wave 2s infinite linear;
+  position: relative;
+  top: 25px;
+  width: 60%;
+  height: 75%;
+  background: #fff;
+  border-radius: 70% 70% 70% 70%/70% 70% 70% 70%;
 }
-@keyframes wave {
-  from {
-    width: 0%;
-    height: 0%;
+.victim .head::before {
+  left: 25px;
+  transform: rotate(-50deg);
+}
+.victim .head::after {
+  right: 25px;
+  transform: rotate(50deg);
+}
+.victim .head .eyes {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 65px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 45%;
+  z-index: 10;
+}
+.victim .head .eyes .eye {
+  position: relative;
+  width: 10px;
+  height: 6px;
+  border: 4px solid #272526;
+  border-top: 0;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+.victim .head .eyes .eye .tear {
+  position: relative;
+  top: 3px;
+  right: -10px;
+  background: #1CA1F2;
+  width: 6px;
+  height: 8px;
+  border-radius: 50% 50% 50% 50%/60% 60% 40% 40%;
+  opacity: 0;
+  -webkit-animation: tear 1s infinite;
+          animation: tear 1s infinite;
+  -webkit-animation-delay: 14s;
+          animation-delay: 14s;
+}
+.victim .head .mouth {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 20px;
+  height: 20px;
+  background: #FE8771;
+  border-radius: 50% 50% 50% 50%/30% 30% 60% 60%;
+  z-index: 10;
+}
+.victim .body {
+  position: relative;
+  margin: -70px auto auto;
+  width: 120px;
+  height: 140px;
+  background: #272526;
+  border-radius: 50% 50% 50% 50%/60% 60% 20% 20%;
+}
+.victim .body::before {
+  display: block;
+  content: "";
+  position: absolute;
+  bottom: 2px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  height: 60%;
+  background: #fff;
+  border-radius: 50% 50% 50% 50%/60% 60% 20% 20%;
+}
+.victim .body .arm {
+  position: absolute;
+  bottom: 50px;
+  width: 55px;
+  height: 20px;
+  background: #272526;
+  z-index: 15;
+}
+.victim .body .arm.left {
+  left: 5px;
+  border-radius: 50% 80% 80% 50%/50% 50% 50% 50%;
+  transform: rotate(20deg);
+  transform-origin: left center;
+  -webkit-animation: left-arm-wiggle 2s infinite;
+          animation: left-arm-wiggle 2s infinite;
+}
+.victim .body .arm.right {
+  right: 5px;
+  border-radius: 80% 50% 50% 80%/50% 50% 50% 50%;
+  transform: rotate(-20deg);
+  transform-origin: right center;
+  -webkit-animation: right-arm-wiggle 2s infinite;
+          animation: right-arm-wiggle 2s infinite;
+}
+.victim .body .mobile {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 30px;
+  width: 25px;
+  height: 40px;
+  background: #272526;
+  box-shadow: 0 -3px 6px 2px #948FB3;
+  border-radius: 3px;
+  z-index: 10;
+  -webkit-animation: phone-wiggle 2s infinite;
+          animation: phone-wiggle 2s infinite;
+  transform-origin: center center;
+}
+.victim .body .foot {
+  position: absolute;
+  bottom: 0;
+  width: 40px;
+  height: 15px;
+  background: #FE8771;
+  border-radius: 50px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+.victim .body .foot.left {
+  left: 10px;
+}
+.victim .body .foot.right {
+  right: 10px;
+}
+
+@-webkit-keyframes tear {
+  0% {
+    top: 3px;
+    left: 5px;
+    opacity: 0;
+  }
+  20% {
+    top: 8px;
+    left: 5px;
+    transform: rotate(-20deg);
+  }
+  50% {
+    left: 10px;
     opacity: 1;
   }
-  to {
-    width: 100%;
-    height: 100%;
+  85% {
+    top: 30px;
+    left: 8px;
+    transform: rotate(20deg);
+  }
+  100% {
+    top: 30px;
     opacity: 0;
+  }
+}
+
+@keyframes tear {
+  0% {
+    top: 3px;
+    left: 5px;
+    opacity: 0;
+  }
+  20% {
+    top: 8px;
+    left: 5px;
+    transform: rotate(-20deg);
+  }
+  50% {
+    left: 10px;
+    opacity: 1;
+  }
+  85% {
+    top: 30px;
+    left: 8px;
+    transform: rotate(20deg);
+  }
+  100% {
+    top: 30px;
+    opacity: 0;
+  }
+}
+@-webkit-keyframes phone-wiggle {
+  0% {
+    transform: translateX(-50%) rotate(0deg);
+  }
+  10% {
+    transform: translateX(-50%) rotate(2deg);
+  }
+  20% {
+    transform: translateX(-50%) rotate(0deg);
+  }
+  30% {
+    transform: translateX(-50%) rotate(-2deg);
+  }
+  50% {
+    transform: translateX(-50%) rotate(0deg);
+  }
+  70% {
+    transform: translateX(-50%) rotate(2deg);
+  }
+  80% {
+    transform: translateX(-50%) rotate(0deg);
+  }
+  90% {
+    transform: translateX(-50%) rotate(-2deg);
+  }
+  100% {
+    transform: translateX(-50%) rotate(0deg);
+  }
+}
+@keyframes phone-wiggle {
+  0% {
+    transform: translateX(-50%) rotate(0deg);
+  }
+  10% {
+    transform: translateX(-50%) rotate(2deg);
+  }
+  20% {
+    transform: translateX(-50%) rotate(0deg);
+  }
+  30% {
+    transform: translateX(-50%) rotate(-2deg);
+  }
+  50% {
+    transform: translateX(-50%) rotate(0deg);
+  }
+  70% {
+    transform: translateX(-50%) rotate(2deg);
+  }
+  80% {
+    transform: translateX(-50%) rotate(0deg);
+  }
+  90% {
+    transform: translateX(-50%) rotate(-2deg);
+  }
+  100% {
+    transform: translateX(-50%) rotate(0deg);
+  }
+}
+@-webkit-keyframes left-arm-wiggle {
+  0% {
+    transform: rotate(20deg);
+  }
+  10% {
+    transform: rotate(18deg);
+  }
+  20% {
+    transform: rotate(20deg);
+  }
+  30% {
+    transform: rotate(22deg);
+  }
+  50% {
+    transform: rotate(20deg);
+  }
+  70% {
+    transform: rotate(22deg);
+  }
+  80% {
+    transform: rotate(20deg);
+  }
+  90% {
+    transform: rotate(18deg);
+  }
+  100% {
+    transform: rotate(20deg);
+  }
+}
+@keyframes left-arm-wiggle {
+  0% {
+    transform: rotate(20deg);
+  }
+  10% {
+    transform: rotate(18deg);
+  }
+  20% {
+    transform: rotate(20deg);
+  }
+  30% {
+    transform: rotate(22deg);
+  }
+  50% {
+    transform: rotate(20deg);
+  }
+  70% {
+    transform: rotate(22deg);
+  }
+  80% {
+    transform: rotate(20deg);
+  }
+  90% {
+    transform: rotate(18deg);
+  }
+  100% {
+    transform: rotate(20deg);
+  }
+}
+@-webkit-keyframes right-arm-wiggle {
+  0% {
+    transform: rotate(-20deg);
+  }
+  10% {
+    transform: rotate(-22deg);
+  }
+  20% {
+    transform: rotate(-20deg);
+  }
+  30% {
+    transform: rotate(-18deg);
+  }
+  50% {
+    transform: rotate(-20deg);
+  }
+  70% {
+    transform: rotate(-18deg);
+  }
+  80% {
+    transform: rotate(-20deg);
+  }
+  90% {
+    transform: rotate(-22deg);
+  }
+  100% {
+    transform: rotate(-20deg);
+  }
+}
+@keyframes right-arm-wiggle {
+  0% {
+    transform: rotate(-20deg);
+  }
+  10% {
+    transform: rotate(-22deg);
+  }
+  20% {
+    transform: rotate(-20deg);
+  }
+  30% {
+    transform: rotate(-18deg);
+  }
+  50% {
+    transform: rotate(-20deg);
+  }
+  70% {
+    transform: rotate(-18deg);
+  }
+  80% {
+    transform: rotate(-20deg);
+  }
+  90% {
+    transform: rotate(-22deg);
+  }
+  100% {
+    transform: rotate(-20deg);
   }
 }
